correct z-index of project image

--- a/src/index.css
+++ b/src/index.css
@@ -284,7 +284,7 @@ a > i:hover, li > i:hover {
 }
 
 .project-image {
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -318,6 +318,7 @@ a > i:hover, li > i:hover {
 
 .project:hover .project-description, .project:hover .project-header {
     display: block;
+    position: relative;
 }
 
 .project:hover .project-tech-stacks-container, .project:hover .project-bottom-bar {
@@ -325,7 +326,11 @@ a > i:hover, li > i:hover {
 }
 
 .project:hover .project-image {
-    opacity: 0.08;
+    opacity: 0.05;
+}
+
+.project-header, .project-description, .project-tech-stacks-container, .project-tech-stack, .project-bottom-bar, .project-icon {
+    z-index: 1;
 }
 
 /**
